--- a/client/default-styles.css
+++ b/client/default-styles.css
@@ -1,8 +1,135 @@
-    body {
-        background-color: rgb(199, 225, 241);
-        color: darkblue;
-    }
+body {
+    color: darkblue;
+    font-family: 'Tenor Sans', sans-serif;
+}
+
+a {
+    color: darkblue;
+}
+
+h1 {
+    font-family: 'Delius', cursive;
+    font-size: 50px;
+    margin: 0%;
+    margin-left: 15px;
+    display: inline;
+}
+
+footer {
+    font-family: 'Reenie Beanie', cursive;
+    font-size: larger;
+}
+
+#desc, section, article{
+    margin-left: 50px;
+    margin-right: 30%;
+}
+
+h3{
+    font-size: 25px;
+}
+#bubbly {
+    vertical-align: baseline;
+    height: 45px;
+    width: 45px;
+    margin: 0%;
     
-    a {
-        color: darkblue;
-    }
+}
+/* NAVIGATION BAR */
+/* source: https://codepen.io/grohit/pen/jObGzdG */
+/* source: https://codepen.io/melnik909/pen/VQOodQ */
+
+#navigation {
+    list-style-type: none;
+    overflow: hidden;
+    margin: 0;
+    padding: 0 30px;
+    border-radius: 30px;
+    border: 2px solid #ffffff00;
+    background-color: rgb(81, 2, 138);
+    margin-right: 20%;
+}
+
+li:not(:last-child) {
+    margin-right: 40px;
+}
+
+.navLink {
+    color: white;
+    border: 2px solid transparent;
+    border-radius: 5px;
+    padding: 10px;
+    display: inline-flex;
+}
+
+.navLink a {
+    text-decoration: none;
+    color: white;
+}
+
+#active {
+    background-color: rgb(98, 2, 167);
+}
+
+.navLink{
+  position: relative;
+  overflow: hidden;
+  will-change: color;
+  transition: color .25s ease-out;  
+}
+
+.navLink::before, 
+.navLink::after{
+  content: "";
+  width: 0;
+  height: 3px;
+  background-color: var(--textUnderlinedLineColor, currentColor);
+
+  will-change: width;
+  transition: width .1s ease-out;
+
+  position: absolute;
+  bottom: 0;
+}
+
+.navLink::before{
+  left: 50%;
+  transform: translateX(-50%); 
+}
+
+.navLink::after{
+  right: 50%;
+  transform: translateX(50%); 
+}
+
+.navLink:hover::before, 
+.navLink:hover::after{
+  width: 100%;
+  transition-duration: .2s;
+}
+
+/* HTML FORMS */
+
+input[type=text] {
+    width: 100%;
+    padding: 5px 15px;
+    margin: 5px 0;
+    box-sizing: border-box;
+    border: 1px solid indigo;
+    border-radius: 4px;
+}
+
+input[type=text]:focus {
+    border: 3px solid lightslategrey;
+}
+
+button, input[type=button], input[type=submit], input[type=reset] {
+    background-color: indigo;
+    border: 0px solid indigo;
+    color: white;
+    padding: 5px 20px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 8px;
+}
